Modified the modules to ignore errors from the pack() function, using encoding path IDs are easily corruptible
Made pretty dirs optional, they are still pretty and php parses off the directory part and puts it into the request
Fixed some stuff with the search, the search variable is not search instead of includes, and the includes variable is used for searching a literal string

2009-02-24
Implemented stream_select() in encode, this is the KEY! to making multiple streams work on a single threaded system
Made a correction to db_artists that was causing the search to completely fail!
Fixed some cleanup inefficiencies, now using NOT REGEXP in the expression
Thought about what to do for the similar_text() problem with the db_album and db_artist modules
Added Accept-Ranges handing to fs_file module, also abstracted some of the code just like db_file
Finished db_video and fs_video module, and made some corrections in the fs_modules
Finished implementing ranges into db_file module, multiple streams can now be started
Used session_write_close() when outputing files in order to allow browsing of other pages while files are downloading
Moved request validation to SQL class, this is so it can be overridden by other database types

2009-02-23
Put validation in the SQL class
Renamed all the $mysql variables to $database which is more appropriate
Fixed a bug with the dir $request variable being used, added preg_quote to quote the special character in the query

2009-02-20
Fixed watch_list module ignored specific directories now, runs an extra query to compare current directory with all the paths in the watch list
Started on new mobile template

2009-02-19
Added a few more status features to the cron.php plugin
Fixed state for cron.php script using globals in the db_watch_list module
Changed the $database->get() and $database->set() functions to $database->query() and improved the API for accessing the database